# cpprestsdk_example

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: Item.h  QJsonWidget.h
include/Observer/: EventTypes.h  IObserver.h  Observed.h
src/: CMakeLists.txt  QJsonWidget.cpp  main.cpp
src/Observer/: Observed.cpp
